# ai-notes

./: .gitignore  README.md  Vagrantfile  desktop.py  main.py  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/agents/: coder.agent.md  fixer.agent.md  orchestrator.agent.md  planner.agent.md  researcher.agent.md  reviewer.agent.md  scout.agent.md
app/: config.py
app/api/: main.py  server.py
app/data/: repository.py  schema.py
app/desktop/: __init__.py  main.py  markdown_preview.py  preferences.py
app/rag/: README.md  chunk_selector.py  client_factory.py  config.py  fusion.py  index.py  langgraph_rag.py  llm_client.py  ollama_client.py  openai_client.py  prompts.py  query_expander.py  service.py
disco_notes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: vagrant-copilot-proxy.md
flatpak/: ai.notes.AINotes.desktop  manifest.yml  org.disco.DiscoNotes.desktop
scripts/: build-flatpak.sh
tests/: __init__.py  test_chunk_selector.py  test_config_migration.py  test_embedding_blob.py  test_fusion.py  test_helpers.py  test_openai_client.py  test_query_expander.py  test_rag_index.py  test_rag_service_wiring.py  test_repository.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
