[project]
name = "disco-notes"
version = "0.1.0"
description = "Notes app MVP with Python backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.0.40",
  "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[project.scripts]
disco-notes-desktop = "app.desktop.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
