[project]
name = "disco-notes"
version = "0.1.0"
description = "Notes app MVP with Python backend."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
  "langgraph>=1.0.0,<2.0.0",
  "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff",
  "pyright",
]

[project.scripts]
disco-notes-desktop = "app.desktop.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = [
  "tests*",
  ".flatpak-builder*",
  "flatpak-build*",
  ".*",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle Error
    "F",    # Pyflakes
    "W",    # Pycodestyle Warning
    "C90",  # Złożoność kodu
    "ANN",  # Wymuszanie typów
    "UP",   # Pyupgrade
    "I",    # Isort (sortowanie importów)
    "B",    # Bugbear
]
ignore = ["E203"]

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "build", "dist"]

pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard" 

reportMissingImports = true
reportMissingTypeStubs = false
