[project]
name = "disco-notes"
version = "0.1.0"
description = "Notes app MVP with Python backend."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
  "langgraph>=1.0.0,<2.0.0",
  "sqlite-vec>=0.1.6",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "ruff",
  "pyright",
  "pip>=26.0.1",
]

[project.scripts]
disco-notes = "app.desktop.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = [
    "tests*",
    "build*",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "build",
]

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle Error
    "F",    # Pyflakes
    "W",    # Pycodestyle Warning
    "C90",  # Złożoność kodu
    "ANN",  # Wymuszanie typów
    "UP",   # Pyupgrade
    "I",    # Isort (sortowanie importów)
    "B",    # Bugbear
]
ignore = ["E203"]

[tool.pyright]
include = ["app", "tests"]
exclude = [
    "build",
]

pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard" 

reportMissingImports = false
reportMissingTypeStubs = false
