[package]
name = "disco-notes"
version = "0.1.0"
description = "Disco Notes desktop shell"
authors = ["you"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
